# Trilobite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  _typos.toml  clean.sh  pyproject.toml  readme.md  readme.rst  setup.py  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_bug.yml  feature_request.yml  question.yml
.github/workflows/: build_and_release.yml  build_documentation.yml  check_pull_requests.yml  run_tests.yml  test_build_and_release.yml
dev/: .buildinfo  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
dev/.doctrees/: api.doctree  examples.doctree  getting_started.doctree  index.doctree  sg_execution_times.doctree
dev/_as_gen/: data.core.DataContainer.COLUMNS.html  data.core.DataContainer.__init__.html  data.core.DataContainer.copy.html  data.core.DataContainer.from_file.html  data.core.DataContainer.from_table.html  data.core.DataContainer.html  data.core.DataContainer.size.html  data.core.DataContainer.table.html  data.core.DataContainer.to_cgs_array.html  data.core.DataContainer.to_file.html  data.core.DataContainer.to_inference_data.html  data.core.InferenceData.__init__.html  data.core.InferenceData.from_arrays.html  data.core.InferenceData.from_dict.html  data.core.InferenceData.from_file.html  data.core.InferenceData.from_hdf5.html  data.core.InferenceData.from_json.html  data.core.InferenceData.from_table.html  data.core.InferenceData.get_observable.html  data.core.InferenceData.get_x_array.html  data.core.InferenceData.get_x_error_array.html  data.core.InferenceData.get_x_lower_array.html  data.core.InferenceData.get_x_upper_array.html  data.core.InferenceData.get_y_array.html  data.core.InferenceData.get_y_error_array.html  data.core.InferenceData.get_y_lower_array.html  data.core.InferenceData.get_y_upper_array.html  data.core.InferenceData.has_x_uncertainty.html  data.core.InferenceData.html  data.core.InferenceData.n_observables.html  data.core.InferenceData.observable_names.html  data.core.InferenceData.observables.html  data.core.InferenceData.shape.html  data.core.InferenceData.size.html  data.core.InferenceData.to_dict.html  data.core.InferenceData.to_file.html  data.core.InferenceData.to_hdf5.html  data.core.InferenceData.to_json.html  data.core.InferenceData.variable_names.html  data.core.InferenceData.x.html  (+7949 more)
dev/_modules/: index.html  logging.html  threading.html
dev/_sources/: api.rst.txt  examples.rst.txt  getting_started.rst.txt  index.rst.txt  sg_execution_times.rst.txt
dev/auto_examples/: index.html  sg_execution_times.html
dev/reference/: developer_guide.html  user_guide.html
docs/: index.html
docs/_templates/: class.rst
docs/source/: api.rst  conf.py  docs_bib.bib  examples.rst  getting_started.rst  index.rst  sg_execution_times.rst
tests/: conftest.py
tests/test_data/: test_inference_data.py  test_light_curve.py  test_masking.py  test_optical_photometry.py  test_radio_photometry.py  test_radio_photometry_epoch.py
tests/test_dynamics/: test_adv_accretion.py  test_full_pressure_accretion.py  test_integrator.py  test_one_zone_accretion.py  test_one_zone_disk_base.py  test_shock_engine.py  test_thin_disk.py
tests/test_inference/: test_priors.py  test_problem.py  test_transforms.py
tests/test_math_utils/: test_bracket_root_finder.py
tests/test_models/: test_GRB_models.py  test_SNE_models.py  test_curve_models.py  test_generic_sed_models.py  test_light_curve_models.py  test_model_base.py  test_synchrotron_sed_models.py
tests/test_parallel/: conftest.py  test_base.py  test_factory.py  test_mp.py  test_mpi.py  test_utils.py
tests/test_utils/: test_cosmology.py  test_phot_utils.py
triceratops/: __init__.py
triceratops/data/: __init__.py  core.py  light_curve.py  optical_photometry.py  photometry.py  utils.py
triceratops/dynamics/: __init__.py
triceratops/inference/: __init__.py  prior.py  problem.py  transform.py
triceratops/math_utils/: __init__.py  _bracket_root_finder.pxd
triceratops/models/: __init__.py
triceratops/multiprocessing/: __init__.py  base.py  mp.py  mpi.py
triceratops/parallel/: __init__.py  base.py  mp.py  mpi.py  utils.py
triceratops/physics_utils/: __init__.py  constants.py  cosmology.py  eos.py  general_relativity.py  gravity.py
triceratops/radiation/: __init__.py  blackbody.py  constants.py  relativity.py
triceratops/utils/: __init__.py  cosmology.py  io_utils.py  log.py  misc_utils.py  phot_utils.py  sr_utils.py
trilobite/: __init__.py  _typing.py
trilobite/data/: __init__.py  core.py  light_curve.py  optical_photometry.py  photometry.py  utils.py
trilobite/dynamics/: __init__.py
trilobite/inference/: __init__.py  prior.py  problem.py  transform.py
trilobite/math_utils/: __init__.py  _bracket_root_finder.pyx
trilobite/models/: _typing.py
trilobite/parallel/: __init__.py  factory.py  mp.py  mpi.py
trilobite/physics_utils/: __init__.py  composition.py  cosmology.py  eos.py  general_relativity.py  gravity.py
trilobite/radiation/: __init__.py  blackbody.py  constants.py
trilobite/utils/: __init__.py  config.py  io_utils.py  log.py  misc_utils.py  phot_utils.py  plot_utils.py
v1.0.0-alpha.1/: .buildinfo  api.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
v1.0.0-alpha.1/.doctrees/: api.doctree  examples.doctree  getting_started.doctree  index.doctree  sg_execution_times.doctree
v1.0.0-alpha.1/_as_gen/: trilobite.data.core.DataContainer.COLUMNS.html  trilobite.data.core.DataContainer.apply_mask.html  trilobite.data.core.DataContainer.copy.html  trilobite.data.core.DataContainer.from_file.html  trilobite.data.core.DataContainer.from_table.html  trilobite.data.core.DataContainer.html  trilobite.data.core.DataContainer.size.html  trilobite.data.core.DataContainer.table.html  trilobite.data.core.DataContainer.to_cgs_array.html  trilobite.data.core.DataContainer.to_file.html  trilobite.data.core.DataContainer.to_inference_data.html  (+2562 more)
(+19226 files in other folders)
